--- a/src/main/resources/fxml/GraphCanvas/GraphCanvasUI.fxml
+++ b/src/main/resources/fxml/GraphCanvas/GraphCanvasUI.fxml
@@ -22,9 +22,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<fx:root fx:id="mainUIScreen" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" onMouseDragged="#translateCanvas" onMousePressed="#notifyMousePressed" onScroll="#zoomCanvas" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="mainUIScreen" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="0.0" onMouseDragged="#translateCanvas" onMousePressed="#notifyMousePressed" onScroll="#zoomCanvas" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 
-	<GridPane fx:id="debugUI" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+	<GridPane fx:id="debugUI" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 	   <columnConstraints>
 	      <ColumnConstraints minWidth="10.0" prefWidth="170.0" />
 	      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
