--- a/src/main/resources/fxml/TopNavBar/TopNavBarUI.fxml
+++ b/src/main/resources/fxml/TopNavBar/TopNavBarUI.fxml
@@ -17,7 +17,7 @@
             <HBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="openFilePanelButton" mnemonicParsing="false" text="Button" />
-						<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Untitled Graph">
+						<Text fx:id="fileNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Untitled Graph">
 							<font>
 								<Font size="19.0" />
 							</font>
@@ -26,12 +26,7 @@
             </HBox>
          </left>
          <right>
-            <HBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER">
-               <children>
-						<Button fx:id="btnLanguage" ellipsisString="" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Language" />
-						<Button fx:id="btnHelp" ellipsisString="" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-cursor: hand ;" text="Help" />
-               </children>
-            </HBox>
+            <HBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER" />
          </right>
       </BorderPane>
 
