--- a/src/main/resources/css/TopNavBar/TopNavBar.css
+++ b/src/main/resources/css/TopNavBar/TopNavBar.css
@@ -1,7 +1,23 @@
-.primary-color{
-	-fx-background-color:   #2a2a2a;
+#root {
+	-fx-background-color: #ffffff;
+	-fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.1), 10, 0, 0, 5);
 }
+
 .button{
 	-fx-background-color:  #2f72dc;
+}
 
+#openFilePanelButton {
+	-fx-background-color: transparent;
+	-fx-margin: 10px;
+	-fx-background-radius: 5px;
+	-fx-border-radius: 5px;
+}
+
+#openFilePanelButton:hover {
+	-fx-background-color: #f0f0f0;
+}
+
+#openFilePanelButton:pressed {
+	-fx-background-color: #d0d0d0;
 }
