--- a/src/main/resources/css/GraphCanvas/text_field.css
+++ b/src/main/resources/css/GraphCanvas/text_field.css
@@ -3,7 +3,7 @@
 	-fx-border-width: 1;
 	-fx-border-color: rgb(170,170,170);
 	-fx-border-radius: 5;
-	
+
 	-fx-font-family: 'arial';
 	-fx-font-size: 14;
 }
@@ -17,17 +17,17 @@
 	-fx-border-color: rgb(170,170,170);
 	-fx-border-width: 0 0 1 0;
 	-fx-padding: 0 3 0.5 3;
-	
+
 	-fx-font-family: 'arial';
 	-fx-font-size: 14;
-	-fx-font-style: italic;	
+	-fx-font-style: italic;
 	-fx-font-weight: lighter;
 }
 .text-field:focused{
 	-fx-border-color: #28a3f4;
 }
 
-.text-field:error {
-  -fx-border-color: red ;
-  -fx-focus-color: red ;
+.text-field.error {
+	-fx-border-color: red ;
+	-fx-focus-color: red ;
 }
