--- a/src/main/resources/fxml/GraphList/GraphBlockUI.fxml
+++ b/src/main/resources/fxml/GraphList/GraphBlockUI.fxml
@@ -2,7 +2,6 @@
 
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,12 +12,10 @@
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 
-<?import javafx.scene.control.ColorPicker?>
-
-
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50"
 	style="-fx-background-color: transparent" 
-	type="HBox" 
+	type="HBox"
+    stylesheets="@../../css/GraphList/GraphList.css"
 	xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
       <AnchorPane>
@@ -31,8 +28,11 @@
       </AnchorPane>
       <StackPane alignment="CENTER_RIGHT">
          <children>
-            <TextField fx:id="expressionTextField" prefHeight="80.0" prefWidth="300.0" promptText="Enter expression..." StackPane.alignment="CENTER_RIGHT" />
-			<MenuButton mnemonicParsing="false">
+            <TextField fx:id="expressionTextField" prefHeight="60.0" prefWidth="250.0" promptText="Enter expression..." StackPane.alignment="CENTER_RIGHT" />
+			<MenuButton mnemonicParsing="false" styleClass="transparent-button" >
+                <padding>
+                    <Insets left="-8" />
+                </padding>
                <items>
                   <MenuItem mnemonicParsing="false" text="Duplicate" />
                   <MenuItem mnemonicParsing="false" text="Delete" />
