--- a/src/main/resources/fxml/TopNavBar/HelpBox.fxml
+++ b/src/main/resources/fxml/TopNavBar/HelpBox.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
@@ -11,6 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 <VBox fx:id="helpBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="350.0" style="-fx-padding: 10px;" stylesheets="@../../css/TopNavBar/helpBox.css" visible="false" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 	 <children>
       <VBox prefHeight="133.0" prefWidth="333.0">
@@ -43,7 +42,7 @@
                         </Text>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-spacing: 4;" styleClass="box" stylesheets="@helpBox.css">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-spacing: 4;" styleClass="box" stylesheets="@../../css/TopNavBar/helpBox.css">
                      <children>
                         <Circle fx:id="restrictionsCircle" fill="DODGERBLUE" radius="31.0" stroke="BLACK" strokeType="INSIDE" styleClass="circleTours" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textTours" text="Restrictions">
@@ -78,52 +77,32 @@
                </font>
             </Text>
             <Line endX="228.1667022705078" startX="-100.0" stroke="#2f72dc" strokeWidth="2.0" />
-            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@helpBox.css" text="Getting started">
+            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@../../css/TopNavBar/helpBox.css" text="Getting started">
                <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../Material/rocket.png" />
-                     </image>
-                  </ImageView>
+                  <FontIcon iconLiteral="fa-rocket" iconSize="23" />
                </graphic>
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@helpBox.css" text="Video tutorials">
+            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@../../css/TopNavBar/helpBox.css" text="Video tutorials">
                <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../Material/video.png" />
-                     </image>
-                  </ImageView>
+                  <FontIcon iconLiteral="fa-video-camera" iconSize="23" />
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@helpBox.css" text="Desmos user guide">
+            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@../../css/TopNavBar/helpBox.css" text="Desmos user guide">
                <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../Material/book.png" />
-                     </image>
-                  </ImageView>
+                  <FontIcon iconLiteral="fa-book" iconSize="23" />
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@helpBox.css" text="Help center">
+            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@../../css/TopNavBar/helpBox.css" text="Help center">
                <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../Material/chat.png" />
-                     </image>
-                  </ImageView>
+                  <FontIcon iconLiteral="fa-commenting-o" iconSize="23" />
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@helpBox.css" text="Keyboard shortcuts">
+            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@../../css/TopNavBar/helpBox.css" text="Keyboard shortcuts">
                <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../Material/keyboard.png" />
-                     </image>
-                  </ImageView>
+                  <FontIcon iconLiteral="fa-keyboard-o" iconSize="23" />
                </graphic>
             </Button>
          </children>
@@ -136,13 +115,9 @@
                </font>
             </Text>
             <Line endX="228.1667022705078" startX="-100.0" stroke="#2f72dc" strokeWidth="2.0" />
-            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@helpBox.css" text="Email our support team">
+            <Button mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="buttonText" stylesheets="@../../css/TopNavBar/helpBox.css" text="Email our support team">
                <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../Material/mail.png" />
-                     </image>
-                  </ImageView>
+                  <FontIcon iconLiteral="fa-envelope-o" iconSize="23" />
                </graphic>
                <VBox.margin>
                   <Insets top="10.0" />
