--- a/src/main/resources/fxml/TopNavBar/LanguageBox.fxml
+++ b/src/main/resources/fxml/TopNavBar/LanguageBox.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="languageBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="109.0" prefWidth="247.0" style="-fx-padding: 10px;" stylesheets="@helpBox.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="languageBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="109.0" prefWidth="247.0" style="-fx-padding: 10px;" stylesheets="@../../css/TopNavBar/helpBox.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="49.0" prefWidth="333.0">
          <children>
