--- a/src/main/resources/css/InputKeyboard/background.css
+++ b/src/main/resources/css/InputKeyboard/background.css
@@ -1,4 +1,4 @@
 .input-keyboard-panel {
-	-fx-background-color: #ffffff;
+	-fx-background-color: #F3F2F7;
 	-fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, -1);
 }
