--- a/src/main/resources/fxml/OpenRecent/OpenRecentUI.fxml
+++ b/src/main/resources/fxml/OpenRecent/OpenRecentUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -10,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
-<SplitPane dividerPositions="0.6" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane dividerPositions="0.6" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.doanjava2.OpenController">
     <items>
         <AnchorPane minHeight="0.0" minWidth="0.0">
             <children>
@@ -25,41 +25,15 @@
                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" />
                             </children>
                         </AnchorPane>
-                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
-                            <children>
-                                <HBox fx:id="createNewButton1" alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #999999;">
-                                    <children>
-                                        <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" />
-                                        <VBox alignment="CENTER_LEFT">
-                                            <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
-                                                <Text fill="#c4c4c4" strokeType="OUTSIDE" strokeWidth="0.0" text="File Location" />
-                                            </children>
-                                        </VBox>
-                                    </children>
-                                    <padding>
-                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                    </padding>
-                                </HBox>
-                                <HBox fx:id="createNewButton11" alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #999999;">
-                                    <children>
-                                        <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" />
-                                        <VBox alignment="CENTER_LEFT">
-                                            <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Hello World" />
-                                                <Text fill="#c4c4c4" strokeType="OUTSIDE" strokeWidth="0.0" text="C:/.../.../..." />
-                                            </children>
-                                        </VBox>
-                                    </children>
-                                    <padding>
-                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                    </padding>
-                                </HBox>
-                            </children>
-                            <padding>
-                                <Insets top="10.0" />
-                            </padding>
+                  <ScrollPane prefHeight="308.0" prefWidth="336.0">
+                     <content>
+                        <VBox fx:id="recentBlocksContainer" prefHeight="300.0" prefWidth="332.0" spacing="10.0">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
                         </VBox>
+                     </content>
+                  </ScrollPane>
                     </children>
                 </VBox>
             </children>
