--- a/src/main/resources/fxml/GraphCanvas/GraphCanvasUI.fxml
+++ b/src/main/resources/fxml/GraphCanvas/GraphCanvasUI.fxml
@@ -23,9 +23,8 @@
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 <fx:root
 		fx:id="mainUIScreen"
-		maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity"
-		minWidth="0.0" onMouseDragged="#translateCanvas" onMousePressed="#notifyMousePressed" onScroll="#zoomCanvas"
-		prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+		maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="0.0" prefWidth="600.0"
+		type="AnchorPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 
 	<GridPane fx:id="debugUI" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
 		<columnConstraints>
